# receipe_manager_django

./: Makefile  README.md  pyproject.toml
recipe_management/: asgi.py  settings.py  urls.py  wsgi.py
